# tic-tac-toe-example

./: .editorconfig  .gitignore  README-installation-notes.md  README.md  package-lock.json  package.json  tsconfig.json
src/borsh-js-generate/: Cargo.toml
src/borsh-js-generate/src/: main.rs
src/client/: hello_world.ts  main.ts  schema.ts  tic_tac_toe.ts  utils.ts
src/client/helpers_default/: be_pubkey.ts  enum.ts  struct.ts
src/program-rust/: Cargo.toml
src/program-rust/src/: lib.rs
src/program-rust/tests/: lib.rs
