[package]
name = "borsh-js-generate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

agsol-borsh-schema = { version = "0.0.2", features = ["full"], path = "../../../agsol-borsh-schema" }
anyhow = "1.0"
