[package]
name = "borsh-js-generate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

borsh-schema-derive = { version = "0.0.2", git = "https://github.com/velas/borsh-schema-derive.git" }
anyhow = "1.0"
tic-tac-toe-example = { path = "../program-rust/" }

borsh = "0.9.3"
