[package]
name = "tic-tac-toe-example"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "~1.10.35"
agsol-borsh-schema = { version = "0.0.2", git = "https://github.com/dj8yfo/agsol-borsh-schema.git" }

[dev-dependencies]
solana-program-test = "~1.10.35"
solana-sdk = "~1.10.35"

[lib]
name = "tic_tac_toe"
crate-type = ["cdylib", "lib"]
